Bug 151441 - Queries don't show any content when executed directly through GUI
Summary: Queries don't show any content when executed directly through GUI
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Base (show other bugs)
Version:
(earliest affected)
7.5.0.0 alpha0+
Hardware: x86-64 (AMD64) All
: high major
Assignee: Caolán McNamara
URL:
Whiteboard: target:7.5.0 target:7.4.2 target:7.3.7
Keywords: bibisectNotNeeded, regression
Depends on:
Blocks:
 
Reported: 2022-10-09 14:20 UTC by Robert Großkopf
Modified: 2022-10-10 13:07 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
test file (3.31 KB, application/vnd.oasis.opendocument.database)
2022-10-09 14:41 UTC, Julien Nabet
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Robert Großkopf 2022-10-09 14:20:05 UTC
Open a database, connected to internal HSQLDB.
Doubleclick on any query.
No content will be shown.

This buggy behavior appears under LO 7.4.2.2 in OpenSUSE 15.3 64bit rpm Linux.
Version couldn't be selected, but it works well in LO 7.4.1.2, so I have set version to "unspecified". Don't know if it is the same with LO 7.4.2.1 - have just deleted this version to update on LO 7.4.2.2
Comment 1 Julien Nabet 2022-10-09 14:41:52 UTC
Created attachment 182929 [details]
test file

On pc Debian x86-64 with master sources updated today, I could reproduce this but it's even more serious, data in tables don't display too.
Comment 2 Julien Nabet 2022-10-09 14:45:10 UTC
Reverting 6aaeeb5a2a0cd7bc8c511c1bf7515e0943940797 make the data appear again in tables and queries.

Caolán: would you have some time to take a look?

Since the code isn't specific to a env, I suppose it impacts not only Linux but also Windows and macOS.
=> let's increase priority.
Comment 3 Julien Nabet 2022-10-09 15:03:06 UTC
Adding some logs, when trying to open a table with current code, I got:
m_xTreeView->get_text(*xEntry)=testjul aName=testjul
m_xTreeView->get_text(*xEntry)=Tables aName=Table1
m_xTreeView->get_text(*xEntry)=Tables aName=Table1

reverting the code, I got:
m_xTreeView->get_text(*xEntry)=testjul aName=testjul
m_xTreeView->get_text(*xEntry)=Tables aName=Table1
m_xTreeView->get_text(*xEntry)=Tables aName=Table1
m_xTreeView->get_text(*xEntry)=Table1 aName=Table1

This location is called from:
#1  0x00007f35d1035f86 in dbaui::SbaTableQueryBrowser::populateTree(com::sun::star::uno::Reference<com::sun::star::container::XNameAccess> const&, weld::TreeIter const&, dbaui::SbaTableQueryBrowser::EntryType)
    (this=0x556478bd8660, _xNameAccess=uno::Reference to (dbaccess::OTableContainer *) 0x556478937af8, rParent=..., eEntryType=dbaui::SbaTableQueryBrowser::etTableOrView)
    at dbaccess/source/ui/browser/unodatbr.cxx:2102
#2  0x00007f35d1036a84 in dbaui::SbaTableQueryBrowser::OnExpandEntry(weld::TreeIter const&) (this=0x556478bd8660, rParent=...) at dbaccess/source/ui/browser/unodatbr.cxx:2184
#3  0x00007f35d102019d in dbaui::SbaTableQueryBrowser::LinkStubOnExpandEntry(void*, weld::TreeIter const&) (instance=0x556478bd8660, data=...) at dbaccess/source/ui/browser/unodatbr.cxx:2142
Comment 4 Commit Notification 2022-10-10 08:27:46 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/5f6596bd125aa8309875d970318f18d4d9704705

Resolves: tdf#151441 queries don't show any content

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Caolán McNamara 2022-10-10 08:28:13 UTC
backports to 7-4 and 7-3 in gerrit
Comment 6 Commit Notification 2022-10-10 10:09:43 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-7-4-2":

https://git.libreoffice.org/core/commit/26f7d989b7cee0843eaa36862d15a02a7060556c

Resolves: tdf#151441 queries don't show any content

It will be available in 7.4.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2022-10-10 10:09:54 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-7-3":

https://git.libreoffice.org/core/commit/c69b3cec33267db9bd6e71ddb2f38e57bc1ceff1

Resolves: tdf#151441 queries don't show any content

It will be available in 7.3.7.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Julien Nabet 2022-10-10 10:46:54 UTC
On pc Debian x86-64 with master sources updated today (including Caolán's patch), I confirm I don't reproduce the pb.
Comment 9 Commit Notification 2022-10-10 12:16:38 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-7-4":

https://git.libreoffice.org/core/commit/2d1faa3dbf3cf5f7aa2e26e728de709842da2e12

Resolves: tdf#151441 queries don't show any content

It will be available in 7.4.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.