Resolves: tdf#151441 queries don't show any content

Change-Id: I66ec14c7cb8816bc2181cc25f7d7f31fdc7d1604
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/141146
Tested-by: Jenkins
Tested-by: Julien Nabet <serval2412@yahoo.fr>
Reviewed-by: Julien Nabet <serval2412@yahoo.fr>
Reviewed-by: Caolán McNamara <caolanm@redhat.com>